--- a/index.html
+++ b/index.html
@@ -1,21 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear Products</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/753e7b77d0.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <!-- header start -->
     <header>
-        
-
-
-
+        <div class="header-content">
+            <h3>Influencer products</h3>
+    <!--nav section start  -->
+            <nav class="menu">
+                <ul>
+                    <li> <a href="">Home</a></li>
+                    <li> <a href="">Products</a></li>
+                    <li> <a href="">Sign up</a></li>
+                    <li> <a href="">Log in</a></li>
+                    <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                </ul>
+            </nav>
+    <!-- nav section end -->
 
     </header>
-
+    <!-- header end -->
+    <!-- main section start -->
     <main>
+
+    <!-- banner section start -->
+
+        <section class="banner">
+            <div class="banner-content">
+                <h1>Start your Journey as<br>Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
+                    faucibus.</p>
+                <button class="preebook">Preebook now <i style="color: #FFFFFF;"
+                        class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="camera-pic">
+                <img src="./images/main-camera.png" alt="">
+
+            </div>
+    <!-- banner section end -->
+
+        </section>
+    <!--social icon section start -->
+        <section class="social-sites">
+            <div class="social-images">
+                <img src="./logos/Alibaba.svg" alt="">
+                <img src="./logos/Amazon.svg" alt="">
+                <img src="./logos/Daraz.pk Logo.svg" alt="">
+                <img src="./logos/Ebay.svg" alt="">
+                <img src="./logos/Rakuten.svg" alt="">
+                <img src="./logos/Target.svg" alt="">
+                <img src="./logos/Walmart.svg" alt="">
+
+            </div>
+        </section>
+    <!-- social icon section end -->
+
+    <!-- collection section start -->
+        <section>
+            <h2 class="collection-heading">Popular Collection</h2>
+            <div class="items">
+                <div class="box">
+                    <img src="./images/tripod.png" alt="">
+                    <h3 class="box-heading">Flex Tripod</h3>
+                    <h6 class="box-heading-2">$50.48</h6>
+                    <p><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i  style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                    <p>Worldwide shifting<br>available<br>Buyers protection possible!</p>
+
+                </div>
+                <div class="box">
+                    <img src="./images/mic.png" alt="">
+                    <h3 class="box-heading">microphone</h3>
+                    <h6 class="box-heading-2">$120.25</h6>
+                    <p><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                    <p>Worldwide shifting<br>available<br>Buyers protection possible!</p>
+
+
+                </div>
+                <div class="box">
+                    <img src="./images/airpod.png" alt="">
+                    <h3 class="box-heading">Airbuds</h3>
+                    <h6 class="box-heading-2">$100.00</h6>
+                    <p><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                    <p>Worldwide shifting<br>available<br>Buyers protection possible!</p>
+
+                </div>
+                <div class="box">
+                    <img src="./images/drone.png" alt="">
+                    <h3 class="box-heading">Drone</h3>
+                    <h6 class="box-heading-2">$980.25</h6>
+                    <p><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                    <p>Worldwide shifting<br>available<br>Buyers protection possible!</p>
+
+                </div>
+                <div class="box">
+                    <img src="./images/lights.png" alt="">
+                    <h3 class="box-heading">Light Setup</h3>
+                    <h6 class="box-heading-2">$1200.00</h6>
+                    <p><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                    <p>Worldwide shifting<br>available<br>Buyers protection possible!</p>
+
+                </div>
+                <div class="box">
+                    <img src="./images/setup.png" alt="">
+                    <h3 class="box-heading">Photoshoot set</h3>
+                    <h6 class="box-heading-2">$820.40</h6>
+                    <p><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                    <p>Worldwide shifting<br>available<br>Buyers protection possible!</p>
+
+                </div>
+                <div class="box">
+                    <img src="./images/camera.png" alt="">
+                    <h3 class="box-heading">Vlogging Camera</h3>
+                    <h6 class="box-heading-2">$1800.80</h6>
+                    <p><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                    <p>Worldwide shifting<br>available<br>Buyers protection possible!</p>
+
+                </div>
+                <div class="box">
+                    <img src="./images/single-light.png" alt="">
+                    <h3 class="box-heading">Green Screen</h3>
+                    <h6 class="box-heading-2">$25.48</h6>
+                    <p><i  style="color: var(--Orange-60, #FB8200);"class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                    <p>Worldwide shifting<br>available<br>Buyers protection possible!</p>
+
+                </div>
+                <div class="box">
+                    <img src="./images/action.png" alt="">
+                    <h3 class="box-heading">Action Camera</h3>
+                    <h6 class="box-heading-2">$380.00</h6>
+                    <p><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star"></i><i style="color: var(--Orange-60, #FB8200);" class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                    <p>Worldwide shifting<br>available<br>Buyers protection possible!</p>
+
+                </div>
+                <div class="see-more">
+                <span> <a href="">See More <i class="fa-solid fa-arrow-right"></i></a> </span>
+            </div>
+            </div>
+        </section>
+    <!-- collection section end -->
 
 
 
@@ -32,4 +163,5 @@
 
     </footer>
 </body>
+
 </html>
